# P-Editor

./: CMakeLists.txt  Config.prc  README.md  build.sh  grid.cpp  grid.hpp  loc.txt  main.cpp  panda3d_imgui.cpp  panda3d_imgui.hpp  scene.cpp  scene.hpp  tools.cpp  tools.hpp
assets/: AB.bam  AG.bam  AR.bam  CircleB.bam  CircleB1.bam  CircleG.bam  CircleG1.bam  CircleR.bam  CircleR1.bam  Grid.bam  Ground.bam  SizerB.bam  SizerC.bam  SizerG.bam  SizerR.bam  SizerS.bam
shader/: instancing-fragment.glsl  instancing-vertex.glsl  panda3d_imgui.frag.texture.glsl
